carousel img alignment fixed

--- a/css/index.css
+++ b/css/index.css
@@ -375,12 +375,12 @@
 
     .carousel-slide .carousel-Img {
         width: 45%;
-        padding-left: 150px;
+        padding-left: 130px;
     }
 
     .carousel-slide .carousel-Img2 {
         width: 50%;
-        padding-left: 190px;
+        padding-left: 170px;
     }
 
     .carousel-caption, .carousel-caption1 {
@@ -396,7 +396,7 @@
     }
 
     .carousel-caption h1, .carousel-caption1 h1 {
-        font-size: 10px;
+        font-size: 7px;
         position: relative;
         align-items: center;
         display: flex;
@@ -404,29 +404,29 @@
     }
 
     .carousel-caption .binaryTrading {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .carousel-caption .withUs {
-        font-size: 10px;
+        font-size: 7px;
         position: relative;
         align-items: center;
         display: flex;
         justify-content: right;
-        margin-top: -18px;
+        margin-top: -14px;
     }
 
     .carousel-caption1 .key-point {
-        font-size: 20px;
+        font-size: 15px;
     }
 
     .carousel-caption1 .sub-point {
-        font-size: 10px;
+        font-size: 7px;
         position: relative;
         align-items: center;
         display: flex;
        justify-content: right;
-        margin-top: -18px;
+        margin-top: -14px;
     }
 
     .carousel-nav span {
